HEAD
	+ Bug fix: warning instead of error if can't add failover rule
1.3.14
	+ Added multi-gateway support for DHCP and PPPoE
	+ Add a warning if a user sets an interface as external and we detect
	  the connection is made through that interface
	+ Remove migration scrips:
		- 0001_import_default_gateway.pl
		- 0002_add_weight_to_gateway.pl
		- 0003_import_routes_to_mvc.pl
		- 0004_import_dns_to_mvc.pl
1.3.13
	+ Bug fix: configuration of PPPoE interfaces now works when
	  confirmation is required because of other modules
	+ Default field in gateways model uses '/ajax/viewer/booleanViewer.mas'
	  instead of in-place edition
1.3.11
	+ Bug fix: fix issue with virtual interfaces on vlan interfaces
	+ Add breadcrumbs
1.3.10
	+ Added PPPoE support
1.3.7
	+ Bug fix: update ebox-netcfg-import to not add upload and download as those
	  fields do no exist any longer
1.3.6
	+ Remove upload/download fields from gateways.
	  Traffic shaping has its own model for that
	+ Bug fix: traffic generated by eBox didn't come out from the
	  right interface as we cleared the CONNMARK with a --save-mark
1.3.4
	+ bugfix: add use=web to guess the public address
	+ bugfix: make ddclient work with dhcp configured interfaces
	+ bugfix: multi gateway rules work again
1.3.3
	+ Bugfix: Edition and removal routes is working again
	+ Remove those static routes that they have been manually added
1.3.1
	+ bugfix: do not use Net::DNS
	+ bugfix: used vlan interface can be removed
1.3.0
	+ bugfix: restart network interfaces properly
1.2
	+ Added support for WAN failover
	+ ifaceNetmask method now uses DHCPNetmask to get the dhcp ifaces
	netmask instead NetWrapper call this adds symethrie with
	ifaceAdrress method and fixes a bug when changing a dhcp interface
	with no lease to static interface
1.1.30
	+ Added support for all missing netmasks between /16 and /32
	+ Added support for search domain in /etc/resolv.conf
	+ Use a template to write down /etc/resolv.conf to allow easier
	user modifications